[project]
name = "pkaani-web"
version = "0.1.0"
description = ""
authors = [
    {name = "hattice gokcan, oleksander isayev, skanda"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (<2)",
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "torchani (==2.2.0)",
    "scikit-learn (==1.0.2)",
    "ase (>=3.24.0,<4.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "setuptools (==58.2.0)"
]

[tool.poetry.dependencies]
python = "^3.9"
torch = { url = "http://download.pytorch.org/whl/cpu/torch-1.10.2%2Bcpu-cp39-cp39-linux_x86_64.whl" }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
